@@ -145,6 +145,10 @@ define(['util'], function () {
     req.setRequestHeader("Accept", "application/json");
     req.setRequestHeader("Content-Type", "application/json");
     req.setRequestHeader('X-Requested-With', 'XMLHttpRequest');
+    //req.setRequestHeader('Origin',"API");
+    //req.onload = function () {
+    //  console.log(req.responseText); //TODO this needs to be done also
+    //}
     req.onreadystatechange = function () {
       /*
 	      States:
@@ -165,6 +169,7 @@ define(['util'], function () {
             KorAP.log(0, e);
             console.log(e);
             returnValueCB(undefined);
+            //errorCB({"status" : 0, "statusText": e + " - Could not parse returned Object."}); // Is this required???
             return;
           };
 
@@ -193,9 +198,26 @@ define(['util'], function () {
         };
         // Call the callback function (no matter requestType) if one is given.
         if (typeof(errorCB) === "function"){
+          var statusTextErrors = ""; // For some reason, the errors created in QueryReference.pm have their text stored in this.responseText.
+          // Here we try to extract this information
+          try {
+              JSON.parse(this.responseText).errors.forEach(
+                e => statusTextErrors = statusTextErrors + e["message"] || ""
+              );
+          } catch {
+            try {
+              if (requestType !== "GET"){
+                statusTextErrors += JSON.parse(this.responseText);
+              }
+            } catch {
+              //Nothing
+            }
+          }
           errorCB({
             "status" : this.status,
-            "statusText" : this.statusText
+            "statusText" : this.statusText + " - " + (statusTextErrors || "")
+            //responseText: A DOMString which contains either the textual data received using the 
+            // XMLHttpRequest or null if the request failed or "" if the request has not yet been sent by calling send(). 
           });
         }; 
       };
@@ -296,6 +318,7 @@ define(['util'], function () {
 
   /**
    * Post new query by query name
+   * CAUTION: Currently not supported by the QueryReference Plugin.
    * 
    * @param {String} qn The name of the new query
    * @param {JSObj} jsObj The query. This will be stringified
